optimizer/src/snapshots/spec_example_of_synchronous_qrl.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { sync$, component$ } from "@qwik.dev/core";

export default component$(() => {
return (
	<>
		<input onClick$={sync$(function(event, target) {
			// comment should be removed
			event.preventDefault();
		})}/>
		<input onClick$={sync$((event, target) => {
			event.preventDefault();
		})}/>
		<input onClick$={sync$((event, target) => event.preventDefault())}/>
	</>
);
});

============================= test.tsx_test_component_input_on_click_1_sync_oncJy6a2xiA.js (ENTRY POINT)==

export const test_component_input_on_click_1_sync_oncJy6a2xiA = (event, target)=>{
	event.preventDefault();
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_input_on_click_1_sync_oncJy6a2xiA",
  "entry": null,
  "displayName": "test.tsx_test_component_input_on_click_1_sync",
  "hash": "oncJy6a2xiA",
  "canonicalFilename": "test.tsx_test_component_input_on_click_1_sync_oncJy6a2xiA",
  "path": "",
  "extension": "js",
  "parent": "onClick_1",
  "ctxKind": "function",
  "ctxName": "sync$",
  "captures": false,
  "loc": [
    243,
    294
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { syncQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
const i_KjI0Ob5htMM = ()=>import("./test.tsx_test_component_input_on_click_2_sync_KjI0Ob5htMM");
const i_oncJy6a2xiA = ()=>import("./test.tsx_test_component_input_on_click_1_sync_oncJy6a2xiA");
const i_liHpajp50do = ()=>import("./test.tsx_test_component_input_on_click_sync_liHpajp50do");
export const test_component_LUXeXe0DQrg = ()=>{
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
		/*#__PURE__*/ _jsxSorted("input", { "on:click": /*#__PURE__*/ syncQrl(/*#__PURE__*/ qrl(i_liHpajp50do, "test_component_input_on_click_sync_liHpajp50do")) }, null, null, 3, null),
		/*#__PURE__*/ _jsxSorted("input", { "on:click": /*#__PURE__*/ syncQrl(/*#__PURE__*/ qrl(i_oncJy6a2xiA, "test_component_input_on_click_1_sync_oncJy6a2xiA")) }, null, null, 3, null),
		/*#__PURE__*/ _jsxSorted("input", { "on:click": /*#__PURE__*/ syncQrl(/*#__PURE__*/ qrl(i_KjI0Ob5htMM, "test_component_input_on_click_2_sync_KjI0Ob5htMM")) }, null, null, 3, null)
	], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    79,
    379
  ]
}
*/
============================= test.tsx_test_component_input_on_click_2_sync_KjI0Ob5htMM.js (ENTRY POINT)==

export const test_component_input_on_click_2_sync_KjI0Ob5htMM = (event, target)=>event.preventDefault();


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_input_on_click_2_sync_KjI0Ob5htMM",
  "entry": null,
  "displayName": "test.tsx_test_component_input_on_click_2_sync",
  "hash": "KjI0Ob5htMM",
  "canonicalFilename": "test.tsx_test_component_input_on_click_2_sync_KjI0Ob5htMM",
  "path": "",
  "extension": "js",
  "parent": "onClick_2",
  "ctxKind": "function",
  "ctxName": "sync$",
  "captures": false,
  "loc": [
    324,
    365
  ]
}
*/
============================= test.tsx_test_component_input_on_click_sync_liHpajp50do.js (ENTRY POINT)==

export const test_component_input_on_click_sync_liHpajp50do = function(event, target) {
	event.preventDefault();
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_input_on_click_sync_liHpajp50do",
  "entry": null,
  "displayName": "test.tsx_test_component_input_on_click_sync",
  "hash": "liHpajp50do",
  "canonicalFilename": "test.tsx_test_component_input_on_click_sync_liHpajp50do",
  "path": "",
  "extension": "js",
  "parent": "onClick",
  "ctxKind": "function",
  "ctxName": "sync$",
  "captures": false,
  "loc": [
    125,
    213
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_liHpajp50do = ()=>import("./test.tsx_test_component_input_on_click_sync_liHpajp50do");
const i_oncJy6a2xiA = ()=>import("./test.tsx_test_component_input_on_click_1_sync_oncJy6a2xiA");
const i_KjI0Ob5htMM = ()=>import("./test.tsx_test_component_input_on_click_2_sync_KjI0Ob5htMM");
const i_LUXeXe0DQrg = ()=>import("./test.tsx_test_component_LUXeXe0DQrg");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_LUXeXe0DQrg, "test_component_LUXeXe0DQrg"));


None
== DIAGNOSTICS ==

[]
