optimizer/src/snapshots/spec_example_optimization_issue_4386.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export const FOO_MAPPING = {
	A: 1,
	B: 2,
	C: 3,
	};

	export default component$(() => {
	const key = 'A';
	const value = FOO_MAPPING[key];

	return <>{value}</>;
	});

============================= test.tsx ==

import { inlinedQrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { FOO_MAPPING } from "./test";
import { componentQrl } from "@qwik.dev/core";
export const FOO_MAPPING = {
	A: 1,
	B: 2,
	C: 3
};
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(()=>{
	const key = "A";
	const value = FOO_MAPPING[key];
	return <>{value}</>;
}, "test_component_LUXeXe0DQrg"));


None
== DIAGNOSTICS ==

[]
