optimizer/src/snapshots/spec_example_preserve_filenames.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from '@qwik.dev/core';

export const App = component$((props) => {
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

============================= test.tsx ==

import { inlinedQrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
	return _jsxSorted(Cmp, null, null, /*#__PURE__*/ _jsxSorted("p", { "on:click": /*#__PURE__*/ inlinedQrl(()=>console.log("warn"), "App_component_Cmp_p_on_click_9VylW0qB00s") }, { class: "stuff" }, "Hello Qwik", 3, null), 3, null);
}, "App_component_ckEPmXZlub0"));


None
== DIAGNOSTICS ==

[]
