optimizer/src/snapshots/spec_example_preserve_filenames_segments.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from '@qwik.dev/core';

export const App = component$((props: Stuff) => {
	foo();
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

export const foo = () => console.log('foo');

============================= test.tsx_App_component_Cmp_p_on_click_9VylW0qB00s.js (ENTRY POINT)==

export const App_component_Cmp_p_on_click_9VylW0qB00s = ()=>console.log("warn");


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_Cmp_p_on_click_9VylW0qB00s",
  "entry": null,
  "displayName": "test.tsx_App_component_Cmp_p_on_click",
  "hash": "9VylW0qB00s",
  "canonicalFilename": "test.tsx_App_component_Cmp_p_on_click_9VylW0qB00s",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_9VylW0qB00s = ()=>import("./test.tsx_App_component_Cmp_p_on_click_9VylW0qB00s");
export const App_component_ckEPmXZlub0 = (props)=>{
	foo();
	return _jsxSorted(Cmp, null, null, /*#__PURE__*/ _jsxSorted("p", { "on:click": /*#__PURE__*/ qrl(i_9VylW0qB00s, "App_component_Cmp_p_on_click_9VylW0qB00s") }, { class: "stuff" }, "Hello Qwik", 3, null), 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    86,
    218
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));
export const foo = ()=>console.log("foo");


None
== DIAGNOSTICS ==

[]
