optimizer/src/snapshots/spec_example_prod_node.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export const Foo = component$(() => {
	return (
		<div>
			<div onClick$={() => console.log('first')}/>
			<div onClick$={() => console.log('second')}/>
			<div onClick$={() => console.log('third')}/>
		</div>
	);
});

============================= test.tsx_Foo_component_div_div_on_click_1u04rzUKERk.tsx (ENTRY POINT)==

export const s_1u04rzUKERk = ()=>console.log("first");


None
/*
{
  "origin": "test.tsx",
  "name": "s_1u04rzUKERk",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_on_click",
  "hash": "1u04rzUKERk",
  "canonicalFilename": "test.tsx_Foo_component_div_div_on_click_1u04rzUKERk",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_HTDRsvUbLiE.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
const i_6j5QosWvK1I = ()=>import("./test.tsx_Foo_component_div_div_on_click_2_6j5QosWvK1I");
const i_tghEYWwM2mM = ()=>import("./test.tsx_Foo_component_div_div_on_click_1_tghEYWwM2mM");
const i_1u04rzUKERk = ()=>import("./test.tsx_Foo_component_div_div_on_click_1u04rzUKERk");
export const s_HTDRsvUbLiE = ()=>{
	return <div>
			<div on:click={/*#__PURE__*/ qrl(i_1u04rzUKERk, "s_1u04rzUKERk")} />
			<div on:click={/*#__PURE__*/ qrl(i_tghEYWwM2mM, "s_tghEYWwM2mM")} />
			<div on:click={/*#__PURE__*/ qrl(i_6j5QosWvK1I, "s_6j5QosWvK1I")} />
		</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "s_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    76,
    261
  ]
}
*/
============================= test.tsx_Foo_component_div_div_on_click_2_6j5QosWvK1I.tsx (ENTRY POINT)==

export const s_6j5QosWvK1I = ()=>console.log("third");


None
/*
{
  "origin": "test.tsx",
  "name": "s_6j5QosWvK1I",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_on_click_2",
  "hash": "6j5QosWvK1I",
  "canonicalFilename": "test.tsx_Foo_component_div_div_on_click_2_6j5QosWvK1I",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_div_div_on_click_1_tghEYWwM2mM.tsx (ENTRY POINT)==

export const s_tghEYWwM2mM = ()=>console.log("second");


None
/*
{
  "origin": "test.tsx",
  "name": "s_tghEYWwM2mM",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_on_click_1",
  "hash": "tghEYWwM2mM",
  "canonicalFilename": "test.tsx_Foo_component_div_div_on_click_1_tghEYWwM2mM",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_HTDRsvUbLiE = ()=>import("./test.tsx_Foo_component_HTDRsvUbLiE");
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_HTDRsvUbLiE, "s_HTDRsvUbLiE"));


None
== DIAGNOSTICS ==

[]
