optimizer/src/snapshots/spec_example_props_optimization.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useTask$ } from '@qwik.dev/core';
import { CONST } from 'const';
export const Works = component$(({
	count,
	some = 1+2,
	hello = CONST,
	stuff: hey,
	stuffDefault: hey2 = 123,
	...rest}) => {
	console.log(hey, some);
	useTask$(({track}) => {
		track(() => count);
		console.log(count, rest, hey, some, hey2);
	});
	return (
		<div some={some} params={{ some }} class={count} {...rest} override>{count}</div>
	);
});

export const NoWorks2 = component$(({count, stuff: {hey}}) => {
	console.log(hey);
	useTask$(({track}) => {
		track(() => count);
		console.log(count);
	});
	return (
		<div class={count}>{count}</div>
	);
});

export const NoWorks3 = component$(({count, stuff = hola()}) => {
	console.log(stuff);
	useTask$(({track}) => {
		track(() => count);
		console.log(count);
	});
	return (
		<div class={count}>{count}</div>
	);
});

============================= test.js ==

import { useTaskQrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _restProps } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _getConstProps } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((_rawProps)=>{
	const rest = _restProps(_rawProps, ["count", "stuff"]);
	console.log(hey, some);
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ inlinedQrl(({ track })=>{
		track(()=>count);
		console.log(count, rest, hey, some, hey2);
	}, "Works_component_useTask_pjo5U5Ikll0"));
	return /*#__PURE__*/ _jsxSplit("div", {
		some,
		params: { some },
		class: _wrapProp(_rawProps, "count"),
		..._getVarProps(rest),
		override: true
	}, _getConstProps(rest), _wrapProp(_rawProps, "count"), 0, null);
}, "Works_component_t45qL4vNGv0"));
export const NoWorks2 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((_rawProps)=>{
	console.log(hey);
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ inlinedQrl(({ track })=>{
		track(()=>count);
		console.log(count);
	}, "NoWorks2_component_useTask_lXiqwbxxjq0"));
	return /*#__PURE__*/ _jsxSorted("div", { class: _wrapProp(_rawProps, "count") }, null, _wrapProp(_rawProps, "count"), 1, null);
}, "NoWorks2_component_JPD9t2HyEKg"));
export const NoWorks3 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((_rawProps)=>{
	console.log(stuff);
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ inlinedQrl(({ track })=>{
		track(()=>count);
		console.log(count);
	}, "NoWorks3_component_useTask_3cQGU0s1VwU"));
	return /*#__PURE__*/ _jsxSorted("div", { class: _wrapProp(_rawProps, "count") }, null, _wrapProp(_rawProps, "count"), 1, null);
}, "NoWorks3_component_fc13h5yYn14"));


None
== DIAGNOSTICS ==

[]
