optimizer/src/snapshots/spec_example_props_wrapping2.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal } from '@qwik.dev/core';
export const Works = component$((props: { fromProps: number }) => {
	let fromLocal = useSignal(0);
	return (
		<div
			computed={fromLocal + props.fromProps}
			local={fromLocal}
			props-wrap={props.fromProps}
			props-only={{props: props.fromProps}}
			props={{props: props.fromProps, local: fromLocal}}
				>
		</div>
	);
});

============================= test.js ==

import { useSignal } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const _hf0 = (p0, p1)=>p0 + p1.fromProps;
const _hf0_str = "p0+p1.fromProps";
const _hf1 = (p0)=>({ props: p0.fromProps });
const _hf1_str = "({props:p0.fromProps})";
const _hf2 = (p0, p1)=>({
	props: p0.fromProps,
	local: p1
});
const _hf2_str = "({props:p0.fromProps,local:p1})";
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
	let fromLocal = useSignal(0);
	return /*#__PURE__*/ _jsxSorted("div", {
		computed: _fnSignal(_hf0, [fromLocal, props], _hf0_str),
		local: fromLocal,
		props-wrap: _wrapProp(props, "fromProps"),
		props-only: _fnSignal(_hf1, [props], _hf1_str),
		props: _fnSignal(_hf2, [props, fromLocal], _hf2_str)
	}, null, null, 3, null);
}, "Works_component_t45qL4vNGv0"));


None
== DIAGNOSTICS ==

[]
